--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -102,7 +102,6 @@
             </MenuItem>
             <MenuItem class="javax.swing.JCheckBoxMenuItem" name="jCheckBoxMenuItem1">
               <Properties>
-                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Show/Hide Console"/>
               </Properties>
               <Events>
@@ -500,15 +499,50 @@
         </Component>
         <Component class="javax.swing.JToolBar$Separator" name="jSeparator9">
         </Component>
+        <Component class="javax.swing.JLabel" name="jLabel3">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="zoom  "/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="zoomCombobox">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="10">
+                <StringItem index="0" value="10%"/>
+                <StringItem index="1" value="20%"/>
+                <StringItem index="2" value="30%"/>
+                <StringItem index="3" value="40%"/>
+                <StringItem index="4" value="50%"/>
+                <StringItem index="5" value="60%"/>
+                <StringItem index="6" value="70%"/>
+                <StringItem index="7" value="80%"/>
+                <StringItem index="8" value="90%"/>
+                <StringItem index="9" value="100%"/>
+              </StringArray>
+            </Property>
+            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[54, 32767]"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="zoomComboboxMouseEntered"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="zoomComboboxActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JToolBar$Separator" name="jSeparator8">
+        </Component>
         <Container class="javax.swing.JToolBar" name="scriptTools">
           <Properties>
             <Property name="floatable" type="boolean" value="false"/>
             <Property name="rollover" type="boolean" value="true"/>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[350, 33]"/>
+              <Dimension value="[360, 33]"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[350, 33]"/>
+              <Dimension value="[360, 33]"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[260, 33]"/>
             </Property>
           </Properties>
           <Events>
@@ -517,35 +551,6 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabel3">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="zoom  "/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JToolBar$Separator" name="jSeparator8">
-            </Component>
-            <Component class="javax.swing.JComboBox" name="zoomCombobox">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="10">
-                    <StringItem index="0" value="10%"/>
-                    <StringItem index="1" value="20%"/>
-                    <StringItem index="2" value="30%"/>
-                    <StringItem index="3" value="40%"/>
-                    <StringItem index="4" value="50%"/>
-                    <StringItem index="5" value="60%"/>
-                    <StringItem index="6" value="70%"/>
-                    <StringItem index="7" value="80%"/>
-                    <StringItem index="8" value="90%"/>
-                    <StringItem index="9" value="100%"/>
-                  </StringArray>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="zoomComboboxMouseEntered"/>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="zoomComboboxActionPerformed"/>
-              </Events>
-            </Component>
             <Component class="javax.swing.JButton" name="scriptStart">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
@@ -637,6 +642,8 @@
                 <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="MainWindow_scriptInterval"/>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
+            </Component>
+            <Component class="javax.swing.JToolBar$Separator" name="jSeparator11">
             </Component>
           </SubComponents>
         </Container>
