--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -504,29 +504,29 @@
             <Property name="text" type="java.lang.String" value="zoom  "/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="zoomCombobox">
+        <Component class="javax.swing.JSpinner" name="zoomSpinner">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="10">
-                <StringItem index="0" value="10%"/>
-                <StringItem index="1" value="20%"/>
-                <StringItem index="2" value="30%"/>
-                <StringItem index="3" value="40%"/>
-                <StringItem index="4" value="50%"/>
-                <StringItem index="5" value="60%"/>
-                <StringItem index="6" value="70%"/>
-                <StringItem index="7" value="80%"/>
-                <StringItem index="8" value="90%"/>
-                <StringItem index="9" value="100%"/>
-              </StringArray>
+            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
+              <SpinnerModel type="list">
+                <ListItem value="10%"/>
+                <ListItem value="20%"/>
+                <ListItem value="30%"/>
+                <ListItem value="40%"/>
+                <ListItem value="50%"/>
+                <ListItem value="60%"/>
+                <ListItem value="70%"/>
+                <ListItem value="80%"/>
+                <ListItem value="90%"/>
+                <ListItem value="100%"/>
+              </SpinnerModel>
             </Property>
-            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[54, 32767]"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[55, 28]"/>
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="zoomComboboxMouseEntered"/>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="zoomComboboxActionPerformed"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="zoomSpinnerMouseEntered"/>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="zoomSpinnerStateChanged"/>
           </Events>
         </Component>
         <Component class="javax.swing.JToolBar$Separator" name="jSeparator8">
@@ -542,7 +542,7 @@
               <Dimension value="[360, 33]"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[260, 33]"/>
+              <Dimension value="[280, 33]"/>
             </Property>
           </Properties>
           <Events>
@@ -635,7 +635,7 @@
                 </Property>
                 <Property name="name" type="java.lang.String" value="" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[47, 20]"/>
+                  <Dimension value="[55, 28]"/>
                 </Property>
               </Properties>
               <AuxValues>
