--- a/Revised JB version/src/javablock/flowchart/generator/For.form
+++ b/Revised JB version/src/javablock/flowchart/generator/For.form
@@ -49,7 +49,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                          <Component id="initial" pref="243" max="32767" attributes="0"/>
+                          <Component id="initial" pref="246" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -177,7 +177,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&#x2190;"/>
+        <Property name="text" type="java.lang.String" value="="/>
       </Properties>
     </Component>
   </SubComponents>
