--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -66,6 +66,9 @@
                 </Property>
                 <Property name="actionCommand" type="java.lang.String" value="manage/save/false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuSaveActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="menuSave.addActionListener(this);"/>
               </AuxValues>
@@ -83,6 +86,9 @@
                 </Property>
                 <Property name="actionCommand" type="java.lang.String" value="manage/saveas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuSaveAsActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="menuSaveAs.addActionListener(this);"/>
               </AuxValues>
